@@ -3,6 +3,7 @@ package com.romanpulov.odeonwss.service;
 import com.romanpulov.odeonwss.config.DatabaseConfiguration;
 import com.romanpulov.odeonwss.db.DbManagerService;
 import com.romanpulov.odeonwss.entity.Artifact;
+import com.romanpulov.odeonwss.entity.ArtifactType;
 import com.romanpulov.odeonwss.entity.MediaFile;
 import com.romanpulov.odeonwss.entity.Track;
 import com.romanpulov.odeonwss.repository.ArtifactRepository;
@@ -19,13 +20,16 @@ import org.springframework.test.context.jdbc.Sql;
 
 import java.util.List;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 @ActiveProfiles(value = "test-01")
 public class ServiceProcessLoadMoviesMediaFilesDVTest {
     private static final Logger log = Logger.getLogger(ServiceProcessLoadMoviesMediaFilesDVTest.class.getSimpleName());
+    public static final String ARTIFACT_TITLE = "Лицензия на убийство";
+    public static final String MEDIA_FILE_TITLE = "Licence to Kill (HD).m4v";
 
     @Autowired
     ProcessService service;
@@ -42,6 +46,10 @@ public class ServiceProcessLoadMoviesMediaFilesDVTest {
     @Autowired
     private DatabaseConfiguration databaseConfiguration;
 
+    private ArtifactType getArtifactType() {
+        return artifactTypeRepository.getWithDVMovies();
+    }
+
     @Test
     @Order(1)
     @Sql({"/schema.sql", "/data.sql"})
@@ -49,7 +57,7 @@ public class ServiceProcessLoadMoviesMediaFilesDVTest {
     void testPrepare() {
         DbManagerService.loadOrPrepare(databaseConfiguration, DbManagerService.DbType.DB_IMPORTED_MOVIES, () -> {
             service.executeProcessor(ProcessorType.DV_MOVIES_IMPORTER);
-            Assertions.assertEquals(ProcessingStatus.SUCCESS, service.getProcessInfo().getProcessingStatus());
+            assertThat(service.getProcessInfo().getProcessingStatus()).isEqualTo(ProcessingStatus.SUCCESS);
             log.info("Movies Importer Processing info: " + service.getProcessInfo());
         });
     }
@@ -58,23 +66,22 @@ public class ServiceProcessLoadMoviesMediaFilesDVTest {
     @Order(2)
     @Rollback(false)
     void testLoadMediaFiles() {
-        int oldCount =  mediaFileRepository.getMediaFilesWithEmptySizeByArtifactType(artifactTypeRepository.getWithDVMovies()).size();
+        int oldCount =  mediaFileRepository.getMediaFilesWithEmptySizeByArtifactType(getArtifactType()).size();
 
         service.executeProcessor(ProcessorType.DV_MOVIES_MEDIA_LOADER);
-        Assertions.assertEquals(ProcessingStatus.SUCCESS, service.getProcessInfo().getProcessingStatus());
+        assertThat(service.getProcessInfo().getProcessingStatus()).isEqualTo(ProcessingStatus.SUCCESS);
         log.info("Movies Media Loader Processing info: " + service.getProcessInfo());
 
-        int newCount =  mediaFileRepository.getMediaFilesWithEmptySizeByArtifactType(artifactTypeRepository.getWithDVMovies()).size();
-
-        Assertions.assertTrue(newCount < oldCount);
+        int newCount =  mediaFileRepository.getMediaFilesWithEmptySizeByArtifactType(getArtifactType()).size();
+        assertThat(newCount).isLessThan(oldCount);
     }
 
     @Test
     @Order(2)
     @Rollback(false)
     void testGetEmptyMediaFiles() {
-        List<MediaFile> mediaFiles = mediaFileRepository.getMediaFilesWithEmptySizeByArtifactType(artifactTypeRepository.getWithDVMusic());
-        log.info("Artifacts:" + mediaFiles.stream().map(v -> v.getArtifact().getTitle()).collect(Collectors.toList()));
+        List<MediaFile> mediaFiles = mediaFileRepository.getMediaFilesWithEmptySizeByArtifactType(getArtifactType());
+        log.info("Artifacts:" + mediaFiles.stream().map(v -> v.getArtifact().getTitle()).toList());
         for (MediaFile mediaFile: mediaFiles) {
             MediaFile getMediaFile = mediaFileRepository.findById(mediaFile.getId()).orElseThrow();
             log.info("Artifact title:" + mediaFile.getArtifact().getTitle());
@@ -86,35 +93,78 @@ public class ServiceProcessLoadMoviesMediaFilesDVTest {
     @Order(3)
     @Rollback(false)
     void testEmptyArtifacts() {
-        List<Artifact> artifacts = artifactRepository.getAllByArtifactType(artifactTypeRepository.getWithDVMovies());
+        List<Artifact> artifacts = artifactRepository.getAllByArtifactType(getArtifactType());
         List<Artifact> emptyDurationArtifacts = artifacts
                 .stream()
                 .filter(a -> a.getDuration() != null && a.getDuration() == 0)
-                .collect(Collectors.toList());
-        Assertions.assertTrue(emptyDurationArtifacts.size() < artifacts.size());
+                .toList();
+        assertThat(emptyDurationArtifacts.size()).isLessThan(artifacts.size());
     }
 
     @Test
     @Order(4)
     @Rollback(false)
     void testEmptyTracks() {
-        List<Artifact> artifacts = artifactRepository.getAllByArtifactTypeWithTracks(artifactTypeRepository.getWithDVMovies());
-        Assertions.assertTrue(artifacts.size() > 0);
+        List<Artifact> artifacts = artifactRepository.getAllByArtifactTypeWithTracks(getArtifactType());
+        assertThat(artifacts.isEmpty()).isFalse();
 
         List<Artifact> emptyDurationArtifacts = artifacts
                 .stream()
                 .filter(a -> a.getDuration() != null && a.getDuration() == 0)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<Track> tracks = artifacts.stream().map(Artifact::getTracks).flatMap(List::stream).collect(Collectors.toList());
-        Assertions.assertTrue(tracks.size() > 0);
-        Assertions.assertEquals(artifacts.size(), tracks.size());
+        List<Track> tracks = artifacts.stream().map(Artifact::getTracks).flatMap(List::stream).toList();
+        assertThat(tracks.isEmpty()).isFalse();
+        assertThat(artifacts.size()).isEqualTo(tracks.size());
 
         List<Track> emptyDurationTracks = tracks
                 .stream()
                 .filter(c -> c.getDuration() == null || c.getDuration() == 0)
-                .collect(Collectors.toList());
-        Assertions.assertTrue(emptyDurationTracks.size() < tracks.size());
-        Assertions.assertEquals(emptyDurationArtifacts.size(), emptyDurationTracks.size());
+                .toList();
+        assertThat(emptyDurationTracks.size()).isLessThan(tracks.size());
+        assertThat(emptyDurationArtifacts.size()).isEqualTo(emptyDurationTracks.size());
+    }
+
+    @Test
+    @Order(5)
+    @Rollback(false)
+    void testChangedFileSize() {
+        Artifact artifact = artifactRepository.getAllByArtifactType(getArtifactType())
+                .stream()
+                .filter(a -> a.getTitle().equals(ARTIFACT_TITLE))
+                .findFirst()
+                .orElseThrow();
+        MediaFile mediaFile = mediaFileRepository.getMediaFilesByArtifactType(getArtifactType())
+                .stream()
+                .filter(m -> m.getName().equals(MEDIA_FILE_TITLE))
+                .findFirst()
+                .orElseThrow();
+
+        long oldSize = mediaFile.getSize();
+        assertThat(artifact.getSize()).isEqualTo(oldSize);
+
+        // change file name
+        long newSize = oldSize + 1000L;
+        mediaFile.setSize(newSize);
+        mediaFileRepository.save(mediaFile);
+
+        // run processor
+        service.executeProcessor(ProcessorType.DV_MOVIES_MEDIA_LOADER);
+        assertThat(service.getProcessInfo().getProcessingStatus()).isEqualTo(ProcessingStatus.SUCCESS);
+
+        // check sizes: should be updated
+        Artifact updatedArtifact = artifactRepository.getAllByArtifactType(getArtifactType())
+                .stream()
+                .filter(a -> a.getTitle().equals(ARTIFACT_TITLE))
+                .findFirst()
+                .orElseThrow();
+        MediaFile updatedMediaFile = mediaFileRepository.getMediaFilesByArtifactType(getArtifactType())
+                .stream()
+                .filter(m -> m.getName().equals(MEDIA_FILE_TITLE))
+                .findFirst()
+                .orElseThrow();
+
+        assertThat(updatedMediaFile.getSize()).isEqualTo(newSize);
+        assertThat(updatedArtifact.getSize()).isEqualTo(newSize);
     }
 }
